UHF-5106: Add translations, fix issue with previous button not getting correct classes

--- a/src/scss/06_components/paragraphs/_unit-search.scss
+++ b/src/scss/06_components/paragraphs/_unit-search.scss
@@ -72,6 +72,7 @@
     }
   }
 
+  .unit-search__results > .views-row:first-of-type,
   .views-infinite-scroll-content-wrapper {
     margin-top: $spacing;
 
