--- a/templates/navigation/pager.html.twig
+++ b/templates/navigation/pager.html.twig
@@ -32,7 +32,7 @@
 #}
 {% if items %}
   <div class="hds-pagination-container">
-    <nav class="hds-pagination pager" role="navigation" aria-label="{{ 'Pagination'|t }}" data-next="Next">
+    <nav class="hds-pagination pager" role="navigation" aria-label="{{ 'Pagination'|t({}, {'context': 'Pagination aria-label'}) }}" data-next="{{ 'Next'|t({}, {'context': 'Pagination next page link text'}) }}">
       {# Print previous item if we are not on the first page. #}
       {% if items.previous %}
         {% set prev_button_classes = [
@@ -40,16 +40,14 @@
           'hds-pagination__button-prev'
           ]
         %}
-        <a href="{{ items.previous.href }}" role="button" title="{{ 'Go to previous page'|t }}" rel="prev"{{ items.previous.attributes.addClass(pref_button_classes)|without('href', 'title', 'rel') }}>
+        <a href="{{ items.previous.href }}" role="button" title="{{ 'Go to previous page'|t({}, {'context': 'Pagination previous page link title'}) }}" rel="prev"{{ items.previous.attributes.addClass(prev_button_classes)|without('href', 'title', 'rel') }}>
           {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'angle-left'} %}
-          <span class="visually-hidden">{{ 'Previous page'|t }}</span>
-          <span aria-hidden="true" class="hds-pagination__button-prev-label">{{ items.previous.text|default('Previous'|t) }}</span>
+          <span aria-hidden="true" class="hds-pagination__button-prev-label">{{ items.previous.text|default('Previous'|t({}, {'context': 'Pagination previous page link text'})) }}</span>
         </a>
       {% else %}
-        <button type="button" disabled title="{{ 'Go to previous page'|t }}" class='hds-button hds-pagination__button-prev'>
+        <button type="button" disabled title="{{ 'Go to previous page'|t({}, {'context': 'Pagination previous page link title'}) }}" class='hds-button hds-pagination__button-prev'>
           {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'angle-left'} %}
-          <span class="visually-hidden">{{ 'Previous page'|t }}</span>
-          <span aria-hidden="true" class="hds-pagination__button-prev-label">{{ items.previous.text|default('Previous'|t) }}</span>
+          <span aria-hidden="true" class="hds-pagination__button-prev-label">{{ items.previous.text|default('Previous'|t({}, {'context': 'Pagination previous page link text'})) }}</span>
         </button>
       {% endif %}
 
@@ -57,7 +55,7 @@
         {# Add an ellipsis if there are further previous pages. #}
         {% if ellipses.previous %}
           <li class="pager__item">
-            <a href="{{ items.first.href }}" aria-label="{{ 'Page'|t ~ ' 1' }}" title="{{ 'Go to page'|t ~ ' 1' }}"{{ items.first.attributes.addClass('hds-pagination__item-link')|without('href', 'title') }}>1</a>
+            <a href="{{ items.first.href }}" aria-label="{{ 'Page'|t({}, {'context': 'Pagination page number aria-label'}) ~ ' 1' }}" title="{{ 'Go to page'|t({}, {'context': 'Pagination page number title'}) ~ ' 1' }}"{{ items.first.attributes.addClass('hds-pagination__item-link')|without('href', 'title') }}>1</a>
           </li>
           <li class="pager__item pager__item--ellipsis" role="presentation"><span class="hds-pagination__item-ellipsis">&hellip;</span></li>
         {% endif %}
@@ -65,7 +63,7 @@
         {% for key, item in items.pages %}
           <li class="pager__item{{ current == key ? ' is-active' : '' }}">
             {% if current == key %}
-              {% set title = 'Current page'|t %}
+              {% set title = 'Current page'|t({}, {'context': 'Pagination current page title'}) %}
               {% set classes = [
                 'hds-pagination__item-link',
                 'hds-pagination__item-link--active',
@@ -77,7 +75,7 @@
               {% set classes = 'hds-pagination__item-link' %}
               {% set aria_current = false %}
             {% endif %}
-            <a href="{{ item.href }}" aria-label="{{ 'Page'|t ~ ' ' ~ key }}" title="{{ title }}"{{ item.attributes.addClass(classes)|without('href', 'title') }} {% if aria_current %}aria-current="page"{% endif %}>
+            <a href="{{ item.href }}" aria-label="{{ 'Page'|t({}, {'context': 'Pagination page number aria-label'}) ~ ' ' ~ key }}" title="{{ title }}"{{ item.attributes.addClass(classes)|without('href', 'title') }} {% if aria_current %}aria-current="page"{% endif %}>
               {{- key -}}
             </a>
           </li>
@@ -86,7 +84,7 @@
         {% if ellipses.next %}
           <li class="pager__item pager__item--ellipsis" role="presentation"><span class="hds-pagination__item-ellipsis">&hellip;</span></li>
           <li class="pager__item">
-            <a href="{{ items.last.href }}" aria-label="{{ 'Page'|t ~ ' ' ~ total_pages }}" title="{{ 'Go to page'|t ~ ' ' ~ total_pages }}"{{ items.last.attributes.addClass('hds-pagination__item-link')|without('href', 'title') }}>
+            <a href="{{ items.last.href }}" aria-label="{{ 'Page'|t({}, {'context': 'Pagination page number aria-label'}) ~ ' ' ~ total_pages }}" title="{{ 'Go to page'|t({}, {'context': 'Pagination page number title'}) ~ ' ' ~ total_pages }}"{{ items.last.attributes.addClass('hds-pagination__item-link')|without('href', 'title') }}>
               {{ total_pages }}
             </a>
           </li>
@@ -100,15 +98,13 @@
           'hds-pagination__button-next'
           ]
         %}
-        <a href="{{ items.next.href }}" title="{{ 'Go to next page'|t }}" role="button" rel="next"{{ items.next.attributes.addClass(next_button_classes)|without('href', 'title', 'rel') }}>
-          <span class="visually-hidden">{{ 'Next page'|t }}</span>
-          <span aria-hidden="true" class="hds-pagination__button-next-label">{{ items.next.text|default('Next'|t) }}</span>
+        <a href="{{ items.next.href }}" title="{{ 'Go to next page'|t({}, {'context': 'Pagination next page link title'}) }}" role="button" rel="next"{{ items.next.attributes.addClass(next_button_classes)|without('href', 'title', 'rel') }}>
+          <span aria-hidden="true" class="hds-pagination__button-next-label">{{ items.next.text|default('Next'|t({}, {'context': 'Pagination next page link text'})) }}</span>
           {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'angle-right'} %}
         </a>
       {% else %}
-        <button type="button" disabled title="{{ 'Go to next page'|t }}" class='hds-button hds-pagination__button-next'>
-          <span class="visually-hidden">{{ 'Next page'|t }}</span>
-          <span aria-hidden="true" class="hds-pagination__button-next-label">{{ items.next.text|default('Next'|t) }}</span>
+        <button type="button" disabled title="{{ 'Go to next page'|t({}, {'context': 'Pagination next page link title'}) }}" class='hds-button hds-pagination__button-next'>
+          <span aria-hidden="true" class="hds-pagination__button-next-label">{{ items.next.text|default('Next'|t({}, {'context': 'Pagination next page link text'})) }}</span>
           {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'angle-right'} %}
         </button>
       {% endif %}
