--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -15,8 +15,8 @@
     node.getType() ? 'page-type--' ~ node.getType()|clean_class,
     'wrapper',
     has_sidebar_first or has_sidebar_second ? 'has-sidebar' : 'no-sidebar',
-    has_sidebar_first ? 'has-sidebar--first',
-    has_sidebar_second ? 'has-sidebar--second',
+    has_sidebar_first ? 'has-sidebar--first' : 'no-sidebar-first',
+    has_sidebar_second ? 'has-sidebar--second' : 'no-sidebar-second',
   ]
 %}
 
