--- a/src/scss/03_generic/_toolbar.scss
+++ b/src/scss/03_generic/_toolbar.scss
@@ -2,17 +2,57 @@
 .toolbar .toolbar-menu,
 .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
 .toolbar-lining {
-  --bg: #ff0000;
-  --name: 'prod ';
-  --bg: #ffda32;
-  --name: 'stage';
-  --bg: #0093ff; /*test*/
-  --name: 'test ';
-  --bg: #a3a3a3;
-  --name: 'dev';
-  --bg: #a3a3a3;
-  --name: 'local ';
   box-shadow: inset 0 -4px 0 var(--bg); 
+}
+
+.env-local {
+  .toolbar .toolbar-bar,
+  .toolbar .toolbar-menu,
+  .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
+  .toolbar-lining {
+    --bg: #a3a3a3;
+    --name: 'local ';
+  }
+}
+
+.env-test {
+  .toolbar .toolbar-bar,
+  .toolbar .toolbar-menu,
+  .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
+  .toolbar-lining {
+    --bg: #0093ff;
+    --name: 'test ';
+  }
+}
+
+.env-stage {
+  .toolbar .toolbar-bar,
+  .toolbar .toolbar-menu,
+  .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
+  .toolbar-lining {
+    --bg: #ffda32;
+    --name: 'stage';
+  }
+}
+
+.env-prod {
+  .toolbar .toolbar-bar,
+  .toolbar .toolbar-menu,
+  .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
+  .toolbar-lining {
+    --bg: #ff0000;
+    --name: 'prod ';
+  }
+}
+
+.env-dev {
+  .toolbar .toolbar-bar,
+  .toolbar .toolbar-menu,
+  .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
+  .toolbar-lining {
+    --bg: #a3a3a3;
+    --name: 'dev';
+  }
 }
 
 .toolbar-lining::before{
@@ -25,7 +65,7 @@
   right:0em;
   top:0;
   width: 1.5em;
-  z-index:2;
+  z-index: 2;
 }
 
 .toolbar-lining::after{
@@ -34,12 +74,12 @@
   display: block;
   font-size: 14px;
   height: 1.5em;
-  margin-top:-0.8em;
-  padding:0.2em;
+  margin-top: -0.8em;
+  padding: 0.2em;
   position: absolute;
-  right:0em;
-  top:-0.75em;
+  right: 0em;
+  top: -0.75em;
   transform: rotate(-90deg);
   transform-origin: right bottom;
-  z-index:3;
+  z-index: 3;
 }
