UHF-2976: Promote sidebar title to h2

--- a/templates/paragraphs/paragraph--sidebar-text.html.twig
+++ b/templates/paragraphs/paragraph--sidebar-text.html.twig
@@ -49,9 +49,9 @@
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
     {% if content.field_sidebar_text_title|render %}
-      <div class="sidebar-text__title">
+      <h2 class="sidebar-text__title">
         {{ content.field_sidebar_text_title }}
-      </div>
+      </h2>
     {% endif %}
     {% if content.field_sidebar_text_text|render %}
       <div class="sidebar-text__text-content">
