--- a/src/scss/environment-indicator.scss
+++ b/src/scss/environment-indicator.scss
@@ -2,7 +2,7 @@
 .toolbar .toolbar-menu,
 .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
 .toolbar-lining {
-  box-shadow: inset 0 -4px 0 var(--bg); 
+  box-shadow: inset 0 -6px 0 var(--bg); 
 }
 
 .env-local {
@@ -10,42 +10,42 @@
   .toolbar .toolbar-menu,
   .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
   .toolbar-lining {
-    --bg: #a3a3a3;
-    --name: 'local ';
+    --bg: var(--color-tram);
+    --name: 'Local ';
   }
 }
 
-.env-test {
+.env-testing {
   .toolbar .toolbar-bar,
   .toolbar .toolbar-menu,
   .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
   .toolbar-lining {
     --bg: #0093ff;
-    --name: 'test ';
+    --name: 'Test ';
   }
 }
 
-.env-stage {
+.env-staging {
   .toolbar .toolbar-bar,
   .toolbar .toolbar-menu,
   .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
   .toolbar-lining {
-    --bg: #ffda32;
-    --name: 'stage';
+    --bg: var(--color-alert);
+    --name: 'Stage';
   }
 }
 
-.env-prod {
+.env-production {
   .toolbar .toolbar-bar,
   .toolbar .toolbar-menu,
   .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
   .toolbar-lining {
-    --bg: #ff0000;
-    --name: 'prod ';
+    --bg: var(--color-error);
+    --name: 'Prod ';
   }
 }
 
-.env-dev {
+.env-development {
   .toolbar .toolbar-bar,
   .toolbar .toolbar-menu,
   .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
@@ -55,31 +55,19 @@
   }
 }
 
-.toolbar-lining::before{
+.toolbar-tray-horizontal .toolbar-lining::after, 
+.toolbar-tray-vertical .toolbar-lining::before {
   background: var(--bg);
-  bottom: 0;
-  content: '';
-  display: block;
-  font-size: 14px;
-  position: absolute;
-  right:0em;
-  top:0;
-  width: 1.5em;
-  z-index: 2;
-}
-
-.toolbar-lining::after{
-  color: black;
   content: var(--name);
   display: block;
-  font-size: 14px;
-  height: 1.5em;
-  margin-top: -0.8em;
-  padding: 0.2em;
+  font-size: var(--fontsize-body-s);
+  padding: 8px 16px;
+  z-index: 3;
+}
+
+.toolbar-tray-horizontal .toolbar-lining::after {
   position: absolute;
-  right: 0em;
-  top: -0.75em;
-  transform: rotate(-90deg);
-  transform-origin: right bottom;
+  right: 0;
+  top: 23px;
   z-index: 3;
 }
