--- a/src/scss/environment-indicator.scss
+++ b/src/scss/environment-indicator.scss
@@ -2,7 +2,7 @@
 .toolbar .toolbar-menu,
 .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
 .toolbar-lining {
-  box-shadow: inset 0 -6px 0 var(--bg); 
+  box-shadow: inset 0 calc(-1 * var(--spacing-2-xs)) 0 var(--bg); 
 }
 
 .env-local {
