UHF-2976: Fix news sidebar margin-top

--- a/src/scss/06_components/pages/_basic-page.scss
+++ b/src/scss/06_components/pages/_basic-page.scss
@@ -138,7 +138,7 @@ $tag-gap: $spacing-half;
 .sidebar_block_heading {
   @include font('h3');
   border-bottom: 2px solid $color-black;
-  margin-top: $spacing-sextuple;
+  margin-top: 0;
   padding-bottom: $spacing-and-half;
   width: 100%;
 }
