--- a/src/scss/06_components/_gin-toolbar.scss
+++ b/src/scss/06_components/_gin-toolbar.scss
@@ -6,7 +6,8 @@
 }
 
 // Fix the position of Node preview container.
+// The specific 54 pixels correlates to Gin toolbar height.
 .gin--horizontal-toolbar .node-preview-container {
-  padding: 0 30px;
-  top: 60px;
+  padding: 0 $spacing-double;
+  top: 54px;
 }
