--- a/src/scss/environment-indicator.scss
+++ b/src/scss/environment-indicator.scss
@@ -2,73 +2,106 @@
 .toolbar .toolbar-menu,
 .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
 .toolbar-lining {
-  box-shadow: inset 0 calc(-1 * var(--spacing-2-xs)) 0 var(--bg); 
+  //TODO: Get spacing variable to work
+  box-shadow: inset 0 -8px 0 var(--bg); 
 }
 
-.env-local {
-  .toolbar .toolbar-bar,
-  .toolbar .toolbar-menu,
-  .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
-  .toolbar-lining {
-    --bg: var(--color-tram);
-    --name: 'Local ';
+.toolbar-vertical .toolbar .toolbar-bar {
+  background-color: var(--bg);
+
+  .toolbar-tab > .toolbar-icon:before {
+    background-color: var(--color);
+  }
+
+  .toolbar-tab > .toolbar-item {
+    color: var(--color);
   }
 }
 
-.env-testing {
-  .toolbar .toolbar-bar,
-  .toolbar .toolbar-menu,
-  .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
-  .toolbar-lining {
-    --bg: var(--color-info);
-    --name: 'Test ';
-  }
-}
-
-.env-staging {
-  .toolbar .toolbar-bar,
-  .toolbar .toolbar-menu,
-  .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
-  .toolbar-lining {
-    --bg: var(--color-alert);
-    --name: 'Stage';
-    color: var(--color-black);
-  }
-}
-
-.env-production {
-  .toolbar .toolbar-bar,
-  .toolbar .toolbar-menu,
-  .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
-  .toolbar-lining {
-    --bg: var(--color-metro);
-    --name: 'Prod ';
-  }
-}
-
-.env-development {
-  .toolbar .toolbar-bar,
-  .toolbar .toolbar-menu,
-  .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
-  .toolbar-lining {
-    --bg: var(--color-black-50);
-    --name: 'Dev';
-  }
-}
 
 .toolbar-tray-horizontal .toolbar-lining::after, 
 .toolbar-tray-vertical .toolbar-lining::before {
   background: var(--bg);
+  color: var(--color);
   content: var(--name);
   display: block;
-  font-size: var(--fontsize-body-s);
-  line-height: var(--lineheight-l);
-  padding: var(--spacing-3-xs) var(--spacing-s);
+  //TODO: Get fontsize varaible to work
+  font-size: 14px;
+  //TODO: Get lineheight variable to work
+  line-height: 1.5;
+  //TODO: Get spacing variable to work
+  padding: 4px 16px;
   z-index: 3;
 }
 
 .toolbar-tray-horizontal .toolbar-lining::after {
   position: absolute;
   right: 0;
-  top: var(--spacing-m);
+  //TODO: Get spacing variable to work
+  top: 24px;
+}
+
+.env-local {
+  &.toolbar .toolbar-bar,
+  &.toolbar .toolbar-menu,
+  &.toolbar .toolbar-bar .toolbar-tab > .toolbar-icon:before,
+  &.toolbar .toolbar-bar .toolbar-tab > .toolbar-item,
+  .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
+  .toolbar-lining {
+    --bg: var(--color-tram);
+    --color: var(--color-white);
+    --name: 'Local ';
+  }
+}
+
+.env-testing {
+  &.toolbar .toolbar-bar,
+  &.toolbar .toolbar-menu,
+  &.toolbar .toolbar-bar .toolbar-tab > .toolbar-icon:before,
+  &.toolbar .toolbar-bar .toolbar-tab > .toolbar-item,
+  .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
+  .toolbar-lining {
+    --bg: var(--color-info);
+    --color: var(--color-white);
+    --name: 'Test ';
+  }
+}
+
+.env-staging {
+  &.toolbar .toolbar-bar,
+  &.toolbar .toolbar-menu,
+  &.toolbar .toolbar-bar .toolbar-tab > .toolbar-icon:before,
+  &.toolbar .toolbar-bar .toolbar-tab > .toolbar-item,
+  .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
+  .toolbar-lining {
+    --bg: var(--color-alert);
+    --color: var(--color-black);
+    --name: 'Stage';
+  }
+}
+
+.env-production {
+  &.toolbar .toolbar-bar,
+  &.toolbar .toolbar-menu,
+  &.toolbar .toolbar-bar .toolbar-tab > .toolbar-icon:before,
+  &.toolbar .toolbar-bar .toolbar-tab > .toolbar-item,
+  .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
+  .toolbar-lining {
+    --bg: var(--color-metro);
+    --color: var(--color-black);
+    --name: 'Prod ';
+  }
+}
+
+.env-development {
+  &.toolbar .toolbar-bar,
+  &.toolbar .toolbar-menu,
+  &.toolbar .toolbar-bar .toolbar-tab > .toolbar-icon:before,
+  &.toolbar .toolbar-bar .toolbar-tab > .toolbar-item,
+  .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
+  .toolbar-lining {
+    --bg: var(--color-black-60);
+    --color: var(--color-white);
+    --name: 'Dev';
+  }
 }
