--- a/src/scss/environment-indicator.scss
+++ b/src/scss/environment-indicator.scss
@@ -2,7 +2,7 @@
 .toolbar .toolbar-menu,
 .toolbar-horizontal .toolbar-tray .toolbar-menu-administration > ul > .menu-item--expanded,
 .toolbar-lining {
-  //TODO: Get spacing variable to work
+  //TODO: Get spacing variable to work in hdbt_admin as well
   box-shadow: inset 0 -8px 0 var(--bg); 
 }
 
@@ -25,11 +25,11 @@
   color: var(--color);
   content: var(--name);
   display: block;
-  //TODO: Get fontsize varaible to work
+  //TODO: Get fontsize varaible to work in hdbt_admin as well
   font-size: 14px;
-  //TODO: Get lineheight variable to work
+  //TODO: Get lineheight variable to work in hdbt_admin as well
   line-height: 1.5;
-  //TODO: Get spacing variable to work
+  //TODO: Get spacing variable to work in hdbt_admin as well
   padding: 4px 16px;
   z-index: 3;
 }
@@ -37,7 +37,7 @@
 .toolbar-tray-horizontal .toolbar-lining::after {
   position: absolute;
   right: 0;
-  //TODO: Get spacing variable to work
+  //TODO: Get spacing variable to work in hdbt_admin as well
   top: 24px;
 }
 
