--- a/src/scss/06_components/layout/__index.scss
+++ b/src/scss/06_components/layout/__index.scss
@@ -6,12 +6,9 @@
 @import 'error-pages';
 @import 'footer';
 @import 'header';
-@import 'layout-content';
-@import 'layout-main-wrapper';
-@import 'layout-sidebar-first';
+@import 'layout';
 @import 'login-page';
 @import 'lower-content';
-@import 'main-content';
 @import 'maintenance-page';
 @import 'paragraph-content';
 @import 'tools';
