UHF-2976: Better aspect ratio for image-placeholder

--- a/src/scss/06_components/media/_image-placeholder.scss
+++ b/src/scss/06_components/media/_image-placeholder.scss
@@ -1,7 +1,9 @@
+$-placeholder-aspect-ratio: 16 / 9;
+
 // TODO: Move under correct component when correct component is done.
 .image-placeholder {
   background-color: var(--hdbt-color-palette--primary);
-  padding-bottom: 67%;
+  padding-bottom: aspect-ratio-padding($-placeholder-aspect-ratio);
   position: relative;
   width: 100%;
 
