--- a/src/scss/06_components/pages/_unit.scss
+++ b/src/scss/06_components/pages/_unit.scss
@@ -29,78 +29,10 @@
   }
 
   .unit__image {
-    @include component-negative-side-margin();
+    // @include component-negative-side-margin;
 
     img {
       @include image-defaults($width: 100%, $max-width: null);
-    }
-  }
-
-  .unit-header__container {
-    @include components-container-max-width();
-    @include component-side-padding();
-    margin-left: auto;
-    margin-right: auto;
-
-    @include breakpoint($breakpoint-l) {
-      display: flex;
-      flex-wrap: wrap;
-    }
-
-    &.has-navigation {
-      .unit__header {
-        order: 2;
-        padding-right: 0;
-
-        @include breakpoint($breakpoint-l) {
-          padding-left: $spacing-double;
-        }
-
-        @include breakpoint($breakpoint-xl) {
-          padding-left: $spacing-triple;
-        }
-      }
-
-      .unit__sidebar {
-        margin-top: $spacing-double;
-        order: 1;
-        padding-left: 0;
-
-        @include breakpoint($breakpoint-l) {
-          margin-top: 0;
-          padding-right: $spacing-double;
-        }
-
-        @include breakpoint($breakpoint-xl) {
-          padding-left: $spacing;
-          padding-right: $spacing-triple;
-        }
-      }
-    }
-
-    .unit__header {
-      @include breakpoint($breakpoint-l) {
-        padding-right: $spacing-double;
-        width: 68%;
-      }
-
-      @include breakpoint($breakpoint-xl) {
-        padding-right: $spacing-triple;
-      }
-    }
-    .unit__sidebar {
-      margin-top: $spacing-double;
-
-      @include breakpoint($breakpoint-l) {
-        margin-top: 0;
-        padding-left: $spacing-double;
-        width: 32%;
-      }
-
-      @include breakpoint($breakpoint-xl) {
-        padding-left: $spacing-triple;
-        padding-right: $spacing;
-      }
     }
   }
 }
