UHF-2976: Improve TODO comment format

--- a/src/scss/06_components/paragraphs/_columns.scss
+++ b/src/scss/06_components/paragraphs/_columns.scss
@@ -69,7 +69,7 @@
 }
 
 // Sidebar layout.
-.has-sidebar.enriched-content, // TODO: Clean up when unit sidebar block has been created.
+.has-sidebar.enriched-content, // TODO: REGIONS Clean up when unit sidebar block has been created.
 .has-sidebar .main-content {
 
   // Columns in content area and inside accordion.
