--- a/src/scss/06_components/layout/_header.scss
+++ b/src/scss/06_components/layout/_header.scss
@@ -1,6 +1,6 @@
 // Header element directly under the wrapper element.
 .wrapper > .header {
-  // TODO: needs to be calculated dynamically
+  // TODO: REGIONS needs to be calculated dynamically
   padding-top: 114px; // Height of the navigation element
 
   @include breakpoint($breakpoint-m) {
