--- a/src/scss/06_components/pages/_news-page.scss
+++ b/src/scss/06_components/pages/_news-page.scss
@@ -1,5 +1,5 @@
 // Fix sidebar width when there are only short news titles
-// TODO: Clean this up with other region things
+// TODO: REGIONS Clean this up with other region things
 .page-type--news-item .sidebar-first {
   display: block;
 }
