--- a/src/scss/06_components/paragraphs/_list-of-links.scss
+++ b/src/scss/06_components/paragraphs/_list-of-links.scss
@@ -235,7 +235,7 @@ $item_spacing: $spacing-triple;
 }
 
 // Sidebar layout.
-.has-sidebar.enriched-content, // TODO: Clean up when unit sidebar block has been created.
+.has-sidebar.enriched-content, // TODO: REGIONS Clean up when unit sidebar block has been created.
 .has-sidebar .main-content {
 
   .list-of-links__item {
