UHF-2976: Added revision support for hdbt_content_get_page_entity(). Fixed TPR unit and TPR service page title block when using overridden name in entities. Removed obsolete label check from node preprocess and template.

--- a/templates/content/node.html.twig
+++ b/templates/content/node.html.twig
@@ -73,20 +73,19 @@
 
 {%
   set classes = [
-  'node--type-' ~ node.bundle|clean_class,
-  node.isPromoted() ? 'node--promoted',
-  node.isSticky() ? 'node--sticky',
-  not node.isPublished() ? 'node--unpublished',
-  view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
-  first_paragraph_grey ? 'has-first-gray-bg-block',
-  node_class,
-]
+    'node--type-' ~ node.bundle|clean_class,
+    node.isPromoted() ? 'node--promoted',
+    node.isSticky() ? 'node--sticky',
+    not node.isPublished() ? 'node--unpublished',
+    view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
+    first_paragraph_grey ? 'has-first-gray-bg-block',
+    node_class,
+  ]
 %}
 
 <article{{ attributes.addClass(classes) }}>
-
   {{ title_prefix }}
-  {% if label and not page and not hide_label %}
+  {% if label and not page and view_mode is not same as('full') %}
     <h2{{ title_attributes }}>
       {% set link_attributes = {
         'rel': 'bookmark',
