--- a/templates/module/helfi-news-item/node--news-item--teaser.html.twig
+++ b/templates/module/helfi-news-item/node--news-item--teaser.html.twig
@@ -1,28 +1,4 @@
-<div class="news-listing__content">
-  {# Short title or Title #}
-  <h2 class="news-listing__title">
-    {% set link_attributes = {
-      'class': [
-        'news-listing__link',
-      ],
-      'rel': 'bookmark',
-    } %}
-    {{ link(short_title, node_url, link_attributes) }}
-  </h2>
-
-  {# Created date and modified date #}
-  {% if published_at is not empty %}
-    {% set html_published_at = published_at|format_date('custom', 'Y-m-d') ~ 'T' ~ published_at|format_date('custom', 'H:i') %}
-    <time datetime="{{ html_published_at }}" class="news-listing__datetime news-listing__datetime--published">
-      <span class="visually-hidden">{{ 'Published'|t({}, {'context': 'The helper text before the node published timestamp'}) }}</span>
-      {{ published_at|format_date('publication_date_format') }}
-    </time>
-  {% endif %}
-</div>
-
-{# Main image #}
-{% if content.field_main_image|render %}
-  <div class="news-listing__img">
-    {{ content.field_main_image }}
-  </div>
-{% endif %}
+{% include '@hdbt/module/helfi-news-item/news-teaser-generic.twig' with {
+  heading_level: 'h2',
+  show_image: true
+}%}
