--- a/templates/module/helfi-news-item/node--news-item--tiny-teaser.html.twig
+++ b/templates/module/helfi-news-item/node--news-item--tiny-teaser.html.twig
@@ -1,30 +1,4 @@
-{# Main image #}
-<div class="news-listing__img">
-  {% if content.field_main_image|render %}
-    {{ content.field_main_image }}
-  {% else %}
-    {% include "@hdbt/misc/image-placeholder.twig" %}
-  {% endif %}
-</div>
-
-<div class="news-listing__content">
-  {# Short title or Title #}
-  <h3 class="news-listing__title">
-    {% set link_attributes = {
-      'class': [
-        'news-listing__link',
-      ],
-      'rel': 'bookmark',
-    } %}
-    {{ link(short_title, node_url, link_attributes) }}
-  </h3>
-
-  {# Created date and modified date #}
-  {% if published_at is not empty %}
-    {% set html_published_at = published_at|format_date('custom', 'Y-m-d') ~ 'T' ~ published_at|format_date('custom', 'H:i') %}
-    <time datetime="{{ html_published_at }}" class="news-listing__datetime news-listing__datetime--published">
-      <span class="visually-hidden">{{ 'Published'|t({}, {'context': 'The helper text before the node published timestamp'}) }}</span>
-      {{ published_at|format_date('publication_date_format') }}
-    </time>
-  {% endif %}
-</div>
+{% include '@hdbt/module/helfi-news-item/news-teaser-generic.twig' with {
+  class: 'news-listing__tiny-teaser',
+  heading_level: 'h3',
+}%}
