--- a/src/scss/06_components/pages/_basic-page.scss
+++ b/src/scss/06_components/pages/_basic-page.scss
@@ -22,24 +22,81 @@
   }
 }
 
-.preamble,
-.lead-in {
+.lead-in .component__content {
   @include font('lead');
+  max-width: $content-width-max;
 }
 
-.preamble::after {
-  background: black;
-  content: '';
-  display: block;
-  height: 2px;
-  margin-bottom: $spacing-double;
-  margin-top: $spacing-double;
-  width: $spacing-quadruple;
+.page-divider {
+  & + * {
+    margin-top: $spacing-triple;
+  }
+
+  // Hidden, when there is no title above, for example if there is hero
+  &:first-child {
+    display: none;
+
+    // When page-divider is hidden, following element should not have margin-top
+    & + * {
+      margin-top: 0;
+    }
+  }
+
+  .page-title ~ article & {
+    display: block;
+
+    // When page-divider is hidden, following element should not have margin-top
+    & + * {
+      margin-top: $spacing-triple;
+    }
+  }
+
+  &::after {
+    background-color: $color-black;
+    content: '';
+    display: block;
+    height: 2px;
+    margin-top: $spacing-double;
+    width: $spacing-quadruple;
+  }
 }
 
-.no-sidebar .component--lead-in {
-  @include component-side-padding;
+.main-image img {
+  @include image-defaults($width: 100%, $max-width: null);
 }
+
+.long-desc {
+  @include font('body');
+
+  > p {
+    max-width: $content-width-max;
+  }
+
+  > :first-child {
+    margin-top: 0;
+  }
+
+  .main-image + & {
+    margin-top: $spacing-quadruple;
+  }
+}
+
+// stylelint-disable no-descending-specificity
+// Set proper width for all generic page components
+.no-sidebar {
+  .page-title,
+  .lead-in,
+  .page-divider,
+  .main-image,
+  .long-desc,
+  .enriched-content {
+    @include components-container-max-width;
+    @include component-side-padding;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+// stylelint-enable no-descending-specificity
 
 .content-date {
   @include font('small');
@@ -128,7 +185,7 @@ $tag-gap: $spacing-half;
   list-style: none;
   margin-bottom: $tag-gap;
 
-  /* stylelint-disable-next-line no-descending-specificity */
+  // stylelint-disable-next-line no-descending-specificity
   a {
     background-color: $color-silver;
     border-radius: 500px;
