--- a/src/scss/06_components/pages/_news-page.scss
+++ b/src/scss/06_components/pages/_news-page.scss
@@ -40,8 +40,8 @@
   color: $color-black-60;
 }
 
-.components--news figure picture img {
-  width: 100%;
+.components--news {
+  margin-top: 0;
 }
 
 // News listings using tiny-teasers.
