--- a/src/scss/06_components/paragraphs/_map.scss
+++ b/src/scss/06_components/paragraphs/_map.scss
@@ -9,7 +9,7 @@ $_map-aspect-ratio-mobile: 1;
   }
 }
 
-.unit__header .component--map {
+.unit .component--map {
   margin-top: $spacing-double;
 
   @include breakpoint($breakpoint-m) {
@@ -21,17 +21,17 @@ $_map-aspect-ratio-mobile: 1;
   padding: $spacing-triple 0;
 }
 
-.unit__header .component--map .component__container,
+.unit .component--map .component__container,
 .has-sidebar .component--map .component__container {
   padding: $spacing-and-half $spacing $spacing-triple;
 
   @include breakpoint($breakpoint-m) {
-   padding: $spacing-double $spacing-double $spacing-triple;
+    padding: $spacing-double $spacing-double $spacing-triple;
   }
 }
 
-.has-sidebar .components--upper .component--map,
-.unit__header .component--map {
+.components--upper .component--map,
+.unit .component--map {
   @include breakpoint(max-width $breakpoint-l) {
     @include component-negative-side-margin;
   }
