--- a/src/scss/06_components/paragraphs/_sidebar-text.scss
+++ b/src/scss/06_components/paragraphs/_sidebar-text.scss
@@ -1,30 +1,34 @@
 .sidebar-text {
   @include font('body');
-  margin-top: $spacing;
+  // margin-top: $spacing;
 
-  &.has-title:first-of-type,
-  &:first-of-type {
-    // Node (basic page).
-    margin-top: $spacing-and-half;
+  // &.has-title:first-of-type,
+  // &:first-of-type {
+  //   // Node (basic page).
+  //   margin-top: $spacing-and-half;
 
-    // Service.
-    .service__sidebar & {
-      margin-top: $spacing;
-    }
+  //   // Service.
+  //   .service__sidebar & {
+  //     margin-top: $spacing;
+  //   }
 
-    // If sidebar navigation exists.
-    .has-navigation & {
-      margin-top: $spacing-triple;
-    }
-  }
+  //   // If sidebar navigation exists.
+  //   .has-navigation & {
+  //     margin-top: $spacing-triple;
+  //   }
+  // }
 
-  &.has-title {
+  // &.has-title {
+  //   margin-top: $spacing-double;
+  // }
+  & + .sidebar-text {
     margin-top: $spacing-double;
   }
 
   .sidebar-text__title {
     @include font('h4');
     color: $color-black;
+    margin-top: 0;
 
     & + .sidebar-text__text-content {
       margin-top: $spacing-and-half;
