--- a/templates/field/field--field-lead-in.html.twig
+++ b/templates/field/field--field-lead-in.html.twig
@@ -1,78 +1,7 @@
-{#
-/**
- * @file
- * Theme override for a field.
- *
- * To override output, copy the "field.html.twig" from the templates directory
- * to your theme's directory and customize it, just like customizing other
- * Drupal templates such as page.html.twig or node.html.twig.
- *
- * Instead of overriding the theming for all fields, you can also just override
- * theming for a subset of fields using
- * @link themeable Theme hook suggestions. @endlink For example,
- * here are some theme hook suggestions that can be used for a field_foo field
- * on an article node type:
- * - field--node--field-foo--article.html.twig
- * - field--node--field-foo.html.twig
- * - field--node--article.html.twig
- * - field--field-foo.html.twig
- * - field--text-with-summary.html.twig
- * - field.html.twig
- *
- * Available variables:
- * - attributes: HTML attributes for the containing element.
- * - label_hidden: Whether to show the field label or not.
- * - title_attributes: HTML attributes for the title.
- * - label: The label for the field.
- * - multiple: TRUE if a field can contain multiple items.
- * - items: List of all the field items. Each item contains:
- *   - attributes: List of HTML attributes for each item.
- *   - content: The field item's content.
- * - entity_type: The entity type to which the field belongs.
- * - field_name: The name of the field.
- * - field_type: The type of the field.
- * - label_display: The display settings for the label.
- *
- * @see template_preprocess_field()
- */
-#}
-
-{%
-  set classes = [
-    'lead-in'
-  ]
-%}
-
-{%
-  set title_classes = [
-    'label',
-    label_display == 'visually_hidden' ? 'visually-hidden',
-  ]
-%}
-
-{% set lead_in_block %}
-  {% embed "@hdbt/misc/component.twig" with
-    {
-      component_classes: [
-        'component--lead-in',
-        'component--hardcoded'
-      ],
-      component_content_class: 'lead-in',
-    }
-  %}
-    {% block component_content %}
-
-      {% for item in items %}
-        {{ item.content }}
-      {% endfor %}
-
-    {% endblock component_content %}
-  {% endembed %}
+{% set content %}
+  {% for item in items %}
+    {{ item.content }}
+  {% endfor %}
 {% endset %}
 
-{% if label_hidden %}
-  <section{{ attributes.addClass(classes) }} aria-label="{{ 'Lead-in paragraph'|t({}, {'context': 'Page lead-in section explanation for screen readers'}) }}">{{ lead_in_block }}</section>
-{% else %}
-  <section{{ title_attributes.addClass(title_classes) }}>{{ label }}: </section>
-  <section{{ attributes.addClass(classes) }}>{{ lead_in_block }}</section>
-{% endif %}
+{% embed "@hdbt/misc/lead-in.twig" with { content: content } %}{% endembed %}
