--- a/templates/module/helfi_tpr/tpr-service.html.twig
+++ b/templates/module/helfi_tpr/tpr-service.html.twig
@@ -22,7 +22,7 @@
     {% endif %}
 
     {% if content.errand_services|render %}
-      <div class="service__errand-services">
+      <div class="enriched-content service__errand-services">
         {{ content.errand_services }}
       </div>
     {% endif %}
